GNOME Bugzilla – Bug 681553
system monitor 3.4.1 shows incorrect numbers for more than 3.0 GiB/s E
Last modified: 2012-08-10 16:07:05 UTC
Forwarded from https://bugs.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/999899, reported for Ubuntu. See the network chart Y axis labels on the screenshot [1], after 3 GiB the label numbering starts again from 0. This might be an integer overflow, or something similar. [1] - https://bugs.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/999899/+attachment/3148167/+files/systemMonitor.png
Created attachment 220847 [details] [review] Proposed patch This patch fixes the overflow error by changing a variable type in the net_scale method from unsigned (implicit unsigned int) to guint64.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.