[PATCH] Fixed unsigned overflow error (use guint64 instead of  unsigned).  https://bugzilla.gnome.org/show_bug.cgi?id=681553